--- a/composer.json
+++ b/composer.json
@@ -38,18 +38,18 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "/usr/local/php-cgi/7.1/bin/php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "/usr/local/php-cgi/7.1/bin/php artisan key:generate"
+            "php artisan key:generate"
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "/usr/local/php-cgi/7.1/bin/php artisan optimize"
+            "php artisan optimize"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "/usr/local/php-cgi/7.1/bin/php artisan optimize"
+            "php artisan optimize"
         ]
     },
     "config": {
